fix: Добавляет возможность ставить фокус после нажатия на редактировать

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                  @keydown.enter="acceptChanges(note)"
                  type="text"
                  class="note__input"
+                 ref="input"
           >
           <!-- Тут попробовал два варианта, один через v-model, а другой получал value из e.target у инпута, но второй вариант не подошел из за того, что тогда при нажатии на кнопку не применяется редактирование -->
 
